--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   </head>
   
   <body>
-    <h3>Welcome to sebawrite.com</h3>
+    <img src="sebawrite-logo-header-100.png" alt="Sebawrite Logo">
+    
+    <h2>Welcome to sebawrite.com</h2>
     
     <p>Sebawrite is currently under development. If you need to contact us, please email <a href="mailto:info@sebawrite.com">us</a>.</p>
   </body>
