--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h2>Welcome to sebawrite.com</h2>
     
     <p>Sebawrite is currently under development. If you need to contact us, please email <a href="mailto:info@sebawrite.com">us</a>.</p>
+    
+    <p>test</p>
   </body>
 
 </html>
