--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   
   <body>
-    <div style="align: center;">
+    <div style="margin: auto; align-content: center;">
     <img src="sebawrite-logo-header-100.png" alt="Sebawrite Logo">
     
     <h2>Welcome to sebawrite.com</h2>
