--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   </head>
   
   <body>
-    <div style="margin: auto; align-content: center;">
+    <center>
+    <div style="align-content: center;">
     <img src="sebawrite-logo-header-100.png" alt="Sebawrite Logo">
     
     <h2>Welcome to sebawrite.com</h2>
@@ -12,6 +13,7 @@
     <p>Sebawrite is currently under development. If you need to contact us, please email <a href="mailto:info@sebawrite.com">us</a>.</p>
     
     </div>
+    </center>
   </body>
 
 </html>
