--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   gtag('config', 'G-PWX9QD84V9');
 </script>
+    <!-- Global Adsense -->
+    <script data-ad-client="ca-pub-2003891487813440" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   
   <body>
